@@ -656,7 +656,7 @@
     ],
     "iconIndex": 422,
     "name": "Passion",
-    "note": "<Weapon Image: 209>\n<Upgrade Slots: 1>\n<HP Life Steal Physical: +5%>",
+    "note": "<Weapon Image: 209>\n<Upgrade Slots: 1>\n<HP Life Steal Physical: +10%>",
     "params": [
       0,
       10,
@@ -810,7 +810,7 @@
   {
     "id": 25,
     "animationId": 122,
-    "description": "A steel staff with a heavy blue tint, due to its pure mana imbuement. It\nrestores mana relative to 10% of damage dealt and grants a unique skill.",
+    "description": "A steel staff with a heavy blue tint, due to its pure mana imbuement. It\nrestores mana relative to 5% of damage dealt and grants a unique skill.",
     "etypeId": 1,
     "traits": [
       {
@@ -831,7 +831,7 @@
     ],
     "iconIndex": 420,
     "name": "Mana Staff",
-    "note": "<Weapon Image: 118>\n<Upgrade Slots: 1>\n<MP Life Steal Physical: +10%>\n\n<Synthesis Ingredients>\nWood: 5\nSteel Ingot: 3\nElixir: 2\n</Synthesis Ingredients>\n<Mask Name: MP Leeching Staff>\n\n<Disassemble Pool: Advanced>\nx1 Steel Ingot: 100%\nx1-2 Steel Ingot: 100%\nx1-3 Steel Ingot: 50%\n</Disassemble Pool: Advanced>",
+    "note": "<Weapon Image: 118>\n<Upgrade Slots: 1>\n<MP Life Steal Physical: +5%>\n\n<Synthesis Ingredients>\nWood: 5\nSteel Ingot: 3\nElixir: 2\n</Synthesis Ingredients>\n<Mask Name: MP Leeching Staff>\n\n<Disassemble Pool: Advanced>\nx1 Steel Ingot: 100%\nx1-2 Steel Ingot: 100%\nx1-3 Steel Ingot: 50%\n</Disassemble Pool: Advanced>",
     "params": [
       0,
       17,
@@ -1542,7 +1542,7 @@
     ],
     "iconIndex": 622,
     "name": "Life Crystal Staff",
-    "note": "<Weapon Image: 110>\n<Upgrade Slots: 2>\n<HP Life Steal Physical: +12.5%>\n<HP Life Steal Magical: +5%>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nLife Crystal\n</Synthesis Ingredients>\n<Mask Name: For HP-Focused Clerics>",
+    "note": "<Weapon Image: 110>\n<Upgrade Slots: 2>\n<HP Life Steal Physical: +15%>\n<HP Life Steal Magical: +7.5%>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nLife Crystal\n</Synthesis Ingredients>\n<Mask Name: For HP-Focused Clerics>",
     "params": [
       0,
       20,
@@ -1580,7 +1580,7 @@
     ],
     "iconIndex": 423,
     "name": "Mana Crystal Staff",
-    "note": "<Weapon Image: 109>\n<Upgrade Slots: 2>\n<MP Life Steal Physical: +15%>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nMana Crystal\n</Synthesis Ingredients>\n<Mask Name: For MP-Focused Clerics>",
+    "note": "<Weapon Image: 109>\n<Upgrade Slots: 2>\n<MP Life Steal Physical: +10%>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nMana Crystal\n</Synthesis Ingredients>\n<Mask Name: For MP-Focused Clerics>",
     "params": [
       0,
       20,
@@ -1856,7 +1856,7 @@
     ],
     "iconIndex": 414,
     "name": "Harmony",
-    "note": "<Weapon Image: 294>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +12.5%>\n<HP Life Steal Magical: +5%>\n<MP Life Steal Physical: +15%>\n\n<Synthesis Ingredients>\nLife Crystal Staff\nMana Crystal Staff\nPassion\nMana Staff\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Harmonious Staff>",
+    "note": "<Weapon Image: 294>\n<Upgrade Slots: 3>\n<HP Life Steal Physical: +15%>\n<HP Life Steal Magical: +7.5%>\n<MP Life Steal Physical: +10%>\n\n<Synthesis Ingredients>\nLife Crystal Staff\nMana Crystal Staff\nPassion\nMana Staff\nTellurium Alloy\nTellurium Core\n</Synthesis Ingredients>\n<Mask Name: Harmonious Staff>",
     "params": [
       0,
       25,
