@@ -10,6 +10,12 @@ Additions:
  - The music menu is back!
 
 Changes:
+ - Rebalanced life/mana steal of staves:
+  ~ Passion: PLS 5% → 10%
+  ~ Mana Staff: PMS 10% → 5%
+  ~ Life Crystal Staff: PLS 12.5% → 15%, MLS 5% → 7.5%
+  ~ Mana Crystal Staff: PMS 15% → 10%
+  ~ Harmony: PLS 12.5% → 15%, MLS 5% → 7.5%, PMS 15% → 10%
  - Rebalanced Dilong:
   ~ MHP: 45000 → 30000
   ~ MAT: 65 → 70
